--- a/src/styles.scss
+++ b/src/styles.scss
@@ -191,6 +191,12 @@ hr {
         }
     }
 
+    // Recordar usuario
+
+    label {
+        color: white;
+    }
+
     // Placeholder
 
     input::-webkit-input-placeholder { color: white }
