--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -2,7 +2,7 @@
     <div>
         <app-menu></app-menu>
         <div class="container">
-            <router-outlet></router-outlet>
+            <app-listado></app-listado>
         </div>
     </div>
     <footer>Diccionario</footer>
