--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,29 +1,26 @@
-<div id="login">
-    <div class="animated fadeIn" style="margin: 50px 0">
+<div id="login" class="animated fadeIn">
+    <form class="formulario" #formularioLogin="ngForm" (ngSubmit)="onSubmit( formularioLogin )">
 
-        <form class="formulario" #formularioLogin="ngForm" (ngSubmit)="onSubmit( formularioLogin )">
+        <!-- Email -->
+        <div class="entrada email">
+            <small *ngIf="formularioLogin.submitted && formularioLogin.controls['email'].errors" class="validacion animated fadeIn text-danger text-left">Este campo es obligatorio</small>
+            <input type="email" email placeholder="Email" required [(ngModel)]="usuario.email" name="email" autocomplete="off">
+        </div>
 
-            <!-- Email -->
-            <div class="entrada email">
-                <small *ngIf="formularioLogin.submitted && formularioLogin.controls['email'].errors" class="validacion animated fadeIn text-danger text-left">Este campo es obligatorio</small>
-                <input type="email" email placeholder="Email" required [(ngModel)]="usuario.email" name="email" autocomplete="off">
-            </div>
+        <!-- Contraseña -->
+        <div class="entrada clave">
+            <small *ngIf="formularioLogin.submitted && formularioLogin.controls['clave'].errors" class="validacion animated fadeIn text-danger text-left">Este campo es obligatorio</small>
+            <input type="password" placeholder="Contraseña" required [(ngModel)]="usuario.clave" name="clave" autocomplete="off">
+        </div>
 
-            <!-- Contraseña -->
-            <div class="entrada clave">
-                <small *ngIf="formularioLogin.submitted && formularioLogin.controls['clave'].errors" class="validacion animated fadeIn text-danger text-left">Este campo es obligatorio</small>
-                <input type="password" placeholder="Contraseña" required [(ngModel)]="usuario.clave" name="clave" autocomplete="off">
-            </div>
+        <!-- Botón -->
+        <button type="submit" class="boton">
+            Enviar
+            <!-- <i class="fa fa-paper-plane" aria-hidden="true"></i> -->
+        </button>
 
-            <!-- Botón -->
-            <button type="submit" class="boton">
-                Enviar
-                <!-- <i class="fa fa-paper-plane" aria-hidden="true"></i> -->
-            </button>
-
-            <!-- Recordar usuario -->
-            <input id="recordar-usuario" type="checkbox" name="recuerdame" [(ngModel)]="recordarUsuario">
-            <label for="recordar-usuario">Recordar usuario</label>
-        </form>
-    </div>
+        <!-- Recordar usuario -->
+        <input id="recordar-usuario" type="checkbox" name="recuerdame" [(ngModel)]="recordarUsuario">
+        <label for="recordar-usuario">Recordar usuario</label>
+    </form>
 </div>
