--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,13 +1,24 @@
 <div id="menu">
-    <div class="container items">
-        <div class="item" routerLinkActive="activo">
-            <a [routerLink]="['listado', 'palabras']">Palabras</a>
-        </div>
-        <div class="item" routerLinkActive="activo">
-            <a [routerLink]="['listado', 'frases']">Frases</a>
-        </div>
-        <div class="item" routerLinkActive="activo">
-            <a [routerLink]="['listado', 'expresiones']">Expresiones</a>
+    <div class="container">
+        <div class="items">
+            <div class="izquierda">
+                <div class="item" routerLinkActive="activo">
+                    <a [routerLink]="['listado', 'palabras']">Palabras</a>
+                </div>
+                <div class="item" routerLinkActive="activo">
+                    <a [routerLink]="['listado', 'frases']">Frases</a>
+                </div>
+                <div class="item" routerLinkActive="activo">
+                    <a [routerLink]="['listado', 'expresiones']">Expresiones</a>
+                </div>
+            </div>
+            <div class="derecha">
+                <div class="item" routerLinkActive="activo">
+                    <a [routerLink]="['login']" (click)="salir()">
+                        Salir
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
