--- a/src/styles.scss
+++ b/src/styles.scss
@@ -403,6 +403,11 @@ hr {
     .items {
         display: flex;
         align-items: center;
+        justify-content: space-between;
+
+        .izquierda {
+            display: flex;
+        }
 
         .item {
             
