--- a/src/styles.scss
+++ b/src/styles.scss
@@ -208,6 +208,26 @@ hr {
                   input:focus::placeholder { color: transparent }
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus {
+//   border: 2px solid white;
+//   -webkit-text-fill-color: white;
+//   -webkit-box-shadow: 0 0 0px 1000px $primary inset;
+//   transition: background-color 5000s ease-in-out 0s;
+
+    animation-name: autocompletar;
+    animation-fill-mode: both;
+}
+
+@keyframes autocompletar {
+    to {
+        color: white;
+        font-family: 'Poppins', sans-serif;
+        background: $primary;
+    }
+}
+
 // ────────────────── //
 //     FORMULARIO     //
 // ────────────────── //
