[ General ] » Nueva categoría incluida (verbos)

--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -24,6 +24,7 @@
     <div class="selector">
       <select [(ngModel)]="categoria" name="categoria" (ngModelChange)="cambiarCategoria( $event )">
         <option value="palabras">Palabra</option>
+        <option value="verbos">Verbos</option>
         <option value="frases">Frase</option>
         <option value="expresiones">Expresión</option>
       </select>
