--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -6,6 +6,9 @@
                     <a [routerLink]="['listado', 'palabras']">Palabras</a>
                 </div>
                 <div class="item" routerLinkActive="activo">
+                    <a [routerLink]="['listado', 'verbos']">Verbos</a>
+                </div>
+                <div class="item" routerLinkActive="activo">
                     <a [routerLink]="['listado', 'frases']">Frases</a>
                 </div>
                 <div class="item" routerLinkActive="activo">
