--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -20,7 +20,9 @@
         </button>
 
         <!-- Recordar usuario -->
-        <input id="recordar-usuario" type="checkbox" name="recuerdame" [(ngModel)]="recordarUsuario">
-        <label for="recordar-usuario">Recordar usuario</label>
+        <div class="recordar-usuario">
+            <input type="checkbox" name="recuerdame" [(ngModel)]="recordarUsuario">
+            <label>Recordar usuario</label>
+        </div>
     </form>
 </div>
