[ General ] » Estilos actualizados

--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -3,7 +3,7 @@
   <h1>{{ titulo }}</h1>
   <hr>
 
-  <form class="formulario" #miFormulario="ngForm" (ngSubmit)="guardar( miFormulario )">
+  <form class="formulario" #miFormulario="ngForm" (ngSubmit)="guardar( miFormulario )" style="margin-top: 75px">
 
     <!-- Firebase ID -->
     <div class="entrada oculto">
