[ Login ] » Nueva imagen de fondo. Estilos actualizados

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -15,8 +15,9 @@
 
         <!-- Botón -->
         <button type="submit" class="boton">
-            Enviar
-            <!-- <i class="fa fa-paper-plane" aria-hidden="true"></i> -->
+            <!-- Enviar -->
+            <i class="icono fa fa-plane" aria-hidden="true"></i>
+            <i class="icono fa fa-plane" aria-hidden="true"></i>
         </button>
 
         <!-- Recordar usuario -->
