[ General ] » Cambios de poca importancia

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -30,7 +30,7 @@
             <!-- Derecha -->
             <ul class="navbar-nav">
                 <li class="nav-item salir">
-                    <a class="nav-link" [routerLink]="['login']">Salir</a>
+                    <a class="nav-link" href="#" (click)="salir()">Salir</a>
                 </li>
             </ul>
         </div>
