--- a/src/styles.scss
+++ b/src/styles.scss
@@ -154,7 +154,7 @@ hr {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background: url('assets/img/dibujo.png') no-repeat center;
+    background: url('assets/img/bg4.svg') no-repeat center;
     background-size: cover;
     min-height: 100vh;
 
