--- a/src/styles.scss
+++ b/src/styles.scss
@@ -420,8 +420,7 @@ hr {
 .elemento {
     display: flex;
     text-decoration: none !important;
-    border-top: 1px solid $primary;
-    border-bottom: 1px solid $primary;
+    border: 1px solid $primary;
     margin-top: -1px;
     position: relative;
     transition: .5s;
