--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -1,9 +1,5 @@
-<div class="animated fadeIn" style="margin: 50px 0">
-
-  <h1>{{ titulo }}</h1>
-  <hr>
-
-  <form class="formulario" #miFormulario="ngForm" (ngSubmit)="guardar( miFormulario )" style="margin-top: 75px">
+<form class="formulario" #miFormulario="ngForm" (ngSubmit)="guardar( miFormulario )" style="margin-top: 75px">
+  <div class="container">
 
     <!-- Firebase ID -->
     <div class="entrada oculto">
@@ -35,5 +31,5 @@
     <button type="submit" class="boton">
       Guardar
     </button>
-  </form>
-</div>
+  </div>
+</form>
