--- a/src/app/componentes/listado/listado.component.html
+++ b/src/app/componentes/listado/listado.component.html
@@ -10,18 +10,26 @@
     <!-- Listado -->
     <ng-container *ngIf="items.length > 0">
 
+        <!-- Buscador -->
         <div class="entrada buscador">
             <input type="text" placeholder="Buscar">
             <i class="icono fa fa-search" aria-hidden="true"></i>
         </div>
         
+        <!-- Recuento -->
         <small class="recuento">{{ items.length }} ítems</small>
+
+        <!-- Tabla -->
         <ng-container *ngFor="let item of items; let i = index">
             <div class="elemento">
+
+                <!-- Ítem en inglés -->
                 <div class="ingles">{{ item.ingles }}</div>
+
+                <!-- Ítem en español -->
                 <div class="castellano">{{ item.castellano }}</div>
 
-                <!-- Botones -->
+                <!-- Botones para editar y eliminar -->
                 <div class="opciones">
                     <a class="opcion editar" [routerLink]="['/diccionario/formulario', 'modificar', categoria, item.id]">
                         <i class="icono fa fa-pencil" aria-hidden="true"></i>
@@ -30,17 +38,22 @@
                         <i class="icono fa fa-trash" aria-hidden="true"></i>
                     </a>
                 </div>
+
             </div>
         </ng-container>
     </ng-container>
 
-    <!-- Vacío -->
+    <!-- Notificación que se muestra cuando no existe ningún ítem -->
     <ng-container *ngIf="items.length == 0">
         No se encontraron resultados
     </ng-container>
 
     <!-- Nuevo -->
-    <a class="nuevo" [routerLink]="['/diccionario/formulario', 'crear', categoria, '']">
+    <!-- <a class="nuevo" [routerLink]="['/diccionario/formulario', 'crear', categoria, '']">
         <i class="icono fa fa-plus" aria-hidden="true"></i>
-    </a>
+    </a> -->
+
+    <!-- Formulario -->
+    <app-formulario></app-formulario>
+
 </div>
