--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,6 +86,7 @@ hr {
     justify-content: space-between;
     flex-direction: column;
     min-height: 100vh;
+    padding-bottom: 112px;
 }
 
 // Mobile First
@@ -311,22 +312,34 @@ hr {
 
 .formulario {
     text-align: center;
+    background: white;
+    border-top: 1px solid $primary;
+    padding: 35px 100px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+
+    .container {
+        display: grid;
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+        grid-column-gap: 25px;
+    }
 }
 
 .entrada {
     display: block;
-    margin: 0 auto 25px;
     position: relative;
     
     input {
         color: black;
         border: none;
-        border-bottom: 1px solid $primary;
+        border: 1px solid $primary;
+        border-radius: 2px;
         outline: none;
         margin: 0;
         padding: 10px 20px;
         width: 100%;
-        max-width: 400px;
     }
 
     .icono {
@@ -340,12 +353,11 @@ hr {
 }
 
 .selector {
-    margin: 0 auto 25px;
     border: none;
-    border-bottom: 1px solid $primary;
+    border: 1px solid $primary;
+    border-radius: 2px;
     position: relative;
     width: 100%;
-    max-width: 400px;
     
     select {
         color: black;
@@ -376,12 +388,10 @@ hr {
     color: white;
     background: $primary;
     border: 1px solid $primary;
-    box-shadow: 0 2px 5px $darkprimary;
+    // box-shadow: 0 2px 5px $darkprimary;
     outline: none;
     padding: 10px 20px;
-    margin: 50px auto 0;
     width: 100%;
-    max-width: 400px;
     
     &:hover {
         color: $primary;
