--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -5,5 +5,5 @@
             <router-outlet></router-outlet>
         </div>
     </div>
-    <footer>Diccionario</footer>
+    <!-- <footer>Diccionario</footer> -->
 </div>
