[ Login ] » Refactorizar código completado

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,5 +1,5 @@
 <div id="login" class="animated fadeIn">
-    <form class="formulario" #formularioLogin="ngForm" (ngSubmit)="onSubmit( formularioLogin )">
+    <form class="formulario-login" #formularioLogin="ngForm" (ngSubmit)="onSubmit( formularioLogin )">
 
         <!-- Email -->
         <div class="entrada email">
