[ Inicio ] » Desplazar a un lado el contenido al abrir el sidebar completado

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -1,9 +1,14 @@
 <div class="wrapper">
     <div>
-        <app-menu></app-menu>
-        <div class="container">
-            <router-outlet></router-outlet>
+
+        <!-- Sidebar -->
+        <app-menu (onAbrirSidebar)="abrirSidebar( $event )"></app-menu>
+
+        <!-- Contenido -->
+        <div id="contenido">
+            <div class="container">
+                <router-outlet></router-outlet>
+            </div>
         </div>
     </div>
-    <!-- <footer>Diccionario</footer> -->
 </div>
